ProjectsPage: Fix alignment of .swarm-result-date
Add padding to the left of it, and move it first in the DOM
so that if the cell content is forced over 2 lines, the date
remains on the top right fo the cell.

--- a/css/testswarm.css
+++ b/css/testswarm.css
@@ -213,9 +213,10 @@ h2 + .row {
 }
 
 .swarm-result-date {
+	float: right;
+	padding: 0 0 0 1em;
 	font-weight: normal;
 	font-size: smaller;
-	float: right;
 	color: #888;
 }
 
